--- a/api/tests/integration/identification_tasks/delete.tavern.yml
+++ b/api/tests/integration/identification_tasks/delete.tavern.yml
@@ -33,3 +33,72 @@ stages:
       method: "DELETE"
     response:
       status_code: 405
+
+---
+
+test_name: Delete is disabled for annotator
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_annotator
+    - jwt_token_user
+
+stages:
+  - name: Delete method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "DELETE"
+    response:
+      status_code: 403
+
+---
+
+test_name: Delete is disabled for supervisor in country
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_supervisor_in_country
+    - jwt_token_user
+
+stages:
+  - name: Delete method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "DELETE"
+    response:
+      status_code: 403
+
+---
+
+test_name: Delete is disabled for reviewer
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_reviewer
+    - jwt_token_user
+
+stages:
+  - name: Delete method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "DELETE"
+    response:
+      status_code: 403
