--- a/api/tests/integration/identification_tasks/predictions/update.tavern.yml
+++ b/api/tests/integration/identification_tasks/predictions/update.tavern.yml
@@ -133,3 +133,96 @@ stages:
           other_species: 0.01
           not_sure: 0.13
         classifier_version: v2025.1
+
+---
+
+test_name: Update is disabled if annotator
+
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - photo_prediction
+    - user_with_role_annotator
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update classification
+    request:
+      url: "{api_live_url}/{endpoint}/{photo_prediction.photo.pk}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
+
+---
+
+test_name: Update is disabled if supervisor
+
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - photo_prediction
+    - user_with_role_supervisor_in_country
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update classification
+    request:
+      url: "{api_live_url}/{endpoint}/{photo_prediction.photo.pk}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
+
+---
+
+test_name: Update is disabled if reviewer
+
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - endpoint
+    - photo_prediction
+    - user_with_role_reviewer
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update classification
+    request:
+      url: "{api_live_url}/{endpoint}/{photo_prediction.photo.pk}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
