--- a/api/tests/integration/identification_tasks/update.tavern.yml
+++ b/api/tests/integration/identification_tasks/update.tavern.yml
@@ -38,3 +38,87 @@ stages:
       method: "{method}"
     response:
       status_code: 405
+
+---
+
+test_name: Update is disabled for annotator
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_annotator
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
+
+---
+
+test_name: Update is disabled for supervisor in country
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_supervisor_in_country
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
+
+---
+
+test_name: Update is disabled for reviewer
+
+includes:
+  - !include schema.yml
+
+marks:
+  - usefixtures:
+    - api_live_url
+    - user_with_role_reviewer
+    - jwt_token_user
+  - parametrize:
+      key: method
+      vals:
+        - PUT
+        - PATCH
+
+stages:
+  - name: Update method is disabled
+    request:
+      url: "{api_live_url}/{endpoint}/"
+      headers:
+        Authorization: "Bearer {jwt_token_user}"
+      method: "{method}"
+    response:
+      status_code: 403
