--- a/api/tests/integration/bites/create.tavern.yml
+++ b/api/tests/integration/bites/create.tavern.yml
@@ -41,7 +41,8 @@ stages:
       data: &request_bite_data
         created_at: '2024-01-01T00:00:00Z'
         sent_at: '2024-01-01T00:30:00Z'
-        location.point: !raw '{"latitude": 41.67419, "longitude": 2.79036}'
+        location.point.latitude: 41.67419
+        location.point.longitude: 2.79036
         location.source: 'auto'
         note: "Test"
         tags:
